<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingTop="50dp"
    android:paddingHorizontal="40dp"
    tools:context=".ProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_operate_your_account"
        android:textSize="18sp"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_drawable"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/email"
            android:layout_marginTop="12dp"
            android:layout_marginStart="15dp"/>
        <EditText
            android:id="@+id/userId"
            android:layout_marginStart="18dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="16sp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_drawable"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_key_24"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"/>
        <EditText
            android:id="@+id/user_password"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="18sp"
            android:hint="@string/password"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:backgroundTint="@color/yellow"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:id="@+id/no_account_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="5dp"
            android:text="@string/sign_up"
            android:textColor="@color/yellow"
            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>