<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/dark_blue">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="50dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv_new_user_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/registration"
            android:textColor="@color/yellow"
            android:textSize="30sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_new_user_sub_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_create_new_account"
            android:textSize="18sp"
            android:textColor="@color/white"/>
        <LinearLayout
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_drawable"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/new_user"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"/>
            <EditText
                android:id="@+id/et_name"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="18sp"
                android:hint="@string/full_name"
                android:inputType="text"/>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_drawable"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/email"
                android:layout_marginTop="12dp"
                android:layout_marginStart="15dp"/>
            <EditText
                android:id="@+id/et_email"
                android:layout_marginStart="18dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="16sp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_drawable"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/phone"
                android:layout_marginStart="13dp"
                android:layout_marginTop="12dp"/>
            <EditText
                android:id="@+id/et_contact"
                android:layout_marginStart="13dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="18sp"
                android:hint="@string/phone_number"
                android:inputType="phone"/>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_drawable"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/gender"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"/>
            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:textSize="18sp"
                    android:textColor="@color/grey"
                    android:text="@string/male" >

                </RadioButton>
                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/grey"
                    android:text="@string/female">

                </RadioButton>
                <RadioButton
                    android:id="@+id/rb_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/grey"
                    android:text="@string/others">

                </RadioButton>
            </RadioGroup>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_drawable"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/flag"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"/>
            <Spinner
                android:id="@+id/sp_country"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_drawable"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/state"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"/>
            <AutoCompleteTextView
                android:id="@+id/act_state"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:background="@null"
                android:hint="@string/state"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="18sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_drawable"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_key_24"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"/>
            <EditText
                android:id="@+id/et_password"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="18sp"
                android:hint="@string/password"
                android:inputType="textPassword"/>

        </LinearLayout>


        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:text="@string/cont"
            android:textSize="20sp"
            android:backgroundTint="@color/yellow"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/already_account_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/already_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="5dp"
                android:text="@string/sign_in"
                android:textColor="@color/yellow"
                android:textSize="14sp" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>